# linux-voice-assistant

./: .gitignore  CHANGELOG.md  README.md  docker-entrypoint.sh  pyproject.toml
docs/: install_application.md
linux_voice_assistant/: __main__.py  audio_player.py  entity.py  models.py  satellite.py  wyoming_wake.py
linux_voice_assistant/player/: alsaplayer.py
tests/: libmpv_smoke_test.py
